--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h2>
-        Promises In Java Scripyt
+        Promises In Java Script
     </h2>
+    <div></div>
+<script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>    
 <script src="app.js"></script>
 </body>
 </html>
